syntax = "proto3";
package protocol;
option go_package = "github.com/raphasch/hotcertification/protocol";

service Certification {
    rpc GetCertificate(CSR) returns (Certificate) {}
}

message CSR {
    uint32 ClientID = 1;
    bytes CertificateRequest = 2;
    bytes ValidationInfo = 3;
}

message Certificate {
    bytes Certificate = 1;
}

message Batch { repeated CSR CSRs = 1; }