syntax = "proto3";
package signing;
option go_package = "./example/threshold/signing";

// TODO:
// 1. Don't send certificate but cert hash or other identifier
// 2. Make asynchronous RPC

service Signing {
    rpc GetPartialSig(Certificate) returns (SigShare) {}
}

message Certificate {
    bytes Certificate = 1;
}

message SigShare {
    bytes Xi = 1;
    bytes C = 2;
    bytes Z = 3;
    uint32 Id = 4;
}
